--- a/app.yaml
+++ b/app.yaml
@@ -30,7 +30,7 @@ spec:
 # The name of the container is specified below
         - name: stedi-caleb
 # The image is a prebuilt file containing the operating system
-          image: calebsalyards/cit262-nginx
+          image: gcr.io/group-project-262/stedi-caleb
 # The ports is a list of tcp ports the pod listens on
           ports:
 # The container port is a specific port the pod listens on
