--- a/redis-dev.yaml
+++ b/redis-dev.yaml
@@ -1,81 +1,60 @@
-# Caleb Salyards 2022
-# This is the version of YAML we are using with the Kubernetes API
-apiVersion: apps/v1
-# The kind is the type of kubernetes resource we are using
-# A deployment is when we run code on a server
-kind: Deployment
-# Metadata is information related to the object we created in Kubernetes
+apiVersion: v1
+kind: Service
 metadata:
-# The name here is the name of our deployment
-  name: redis-dev-caleb
+  name: redis-stedi-dev-caleb
 spec:
-# Replicas refers to the number of pods we deploy
-  replicas: 1
-# A selector is a route to my pod
+  ports:
+    - port: 6379
+      name: redis
+  clusterIP: None
   selector:
-# Matchlabels are a label for my selector
+    app: redis-stedi-dev-caleb
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: redis-stedi-dev-caleb
+spec:
+  selector:
     matchLabels:
-# App is a specific kind of label for my podkub
-      app: redis-dev-caleb
-# The Template describes all the features of my pod
+      app: redis-stedi-dev-caleb  # has to match .spec.template.metadata.labels
+  serviceName: redis-stedi-dev-caleb
+  replicas: 1
   template:
-# Metadata provides labels for my template
     metadata:
       labels:
-        app: redis-dev-caleb
-# The spec refers to the specification of my containers in my pod
+        app: redis-stedi-dev-caleb  # has to match .spec.selector.matchLabels
     spec:
-# Containers can have one or more docker containers in the pod
       containers:
-# The name of the container is specified below
-        - name: redis-dev-caleb
-# The image is a prebuilt file containing the operating system
-# If no web domain is specified, builder will assume it goes to dockerhub.
-          image: redis
-# The ports is a list of tcp ports the pod listens on
+        - name: redis-stedi-dev-caleb
+          image: redis:7.0.5-alpine
+          imagePullPolicy: Always
+          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
           ports:
-# The container port is a specific port the pod listens on
-           - containerPort: 80
-# Resources are the compute resources used by the pod in the cloud
+            - containerPort: 6379
+              name: redis
           resources:
-# Limits represent the max amount of cpu and memory allowed for the pod
             limits:
-# CPU is the max amount of CPU that can be used by the pod
               cpu: ".125"
-# Memory is the max amount of memory that can be used by the pod
               memory: "500Mi"
-# Requests is the minimum amount of compute resources used by the pod
             requests:
-# CPU is the minimum amount of CPU the pod needs to run
               cpu: ".125"
-# Memory is the minimum amount of memory the pod needs to run
               memory: "250Mi"
-# LivenessProbe is a configuration that checks the pod for health
-          livenessProbe:
-# HttpGet instructs kubernetes to do an HTTP request to check health
-            httpGet:
-# Path defines the url to use when doing the HTTP request
-              path: /
-# Port defines the port to use when doing the HTTP request
-              port: 80
-# initialDelaySeconds tells Kubernetes to wait before doing a request
-            initialDelaySeconds: 3
-# periodSeconds tells Kubernetes how often to check health
-            periodSeconds: 3
-
----
-# apiVersion tells Kubernetes which version of ymdiraml to use
-apiVersion: v1
-# kind tells what kind of object to create
-kind: Service
-# metadata is the metadata
-metadata:
-  name: redis-dev-caleb-loadbalancer
-spec: 
-    # 'selector' tells network layer how to find the right pod
-    selector:
-      app: redis-dev-caleb
-    type: LoadBalancer # distrubutes network packets to one or more pods
-    ports:
-      - port: 80
-        targetPort: 80 # port that pod listens to inside of Kubernetes
+          env:
+          - name: REDIS_PASS
+            valueFrom:
+              secretKeyRef:
+                name: redis-secrets-dev-caleb
+                key: REDIS_PASS
+          volumeMounts:
+            - name: redis-dev-volume
+              mountPath: /data
+  volumeClaimTemplates:
+  - metadata:
+      name: redis-dev-volume
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 10Gi
