--- a/app.yaml
+++ b/app.yaml
@@ -79,3 +79,60 @@ spec:
     ports:
       - port: 80
         targetPort: 4567 # port that pod listens to inside of Kubernetes
+---
+# apiVersion tells Kubernetes which version of ymdiraml to use
+apiVersion: networking.gke.io/v1
+# kind tells what kind of object to create
+kind: ManagedCertificate
+# metadata is the metadata
+metadata:
+  name: stedi-caleb-certificate
+spec: 
+    # 'selector' tells network layer how to find the right pod
+    domains:
+      - calebsalyards.cit262.com
+---
+# apiVersion tells Kubernetes which version of ymdiraml to use
+apiVersion: v1
+# kind tells what kind of object to create
+kind: Service
+# metadata is the metadata
+metadata:
+  name: stedi-caleb-nodeport
+spec: 
+    # 'selector' tells network layer how to find the right pod
+    selector:
+      app: stedi
+    type: NodePort # distrubutes network packets to one or more pods
+    ports:
+      - port: 80
+        targetPort: 4567 # port that pod listens to inside of Kubernetes
+
+---
+# apiVersion tells Kubernetes which version of ymdiraml to use
+apiVersion: networking.k8s.io/v1
+# kind tells what kind of object to create
+kind: Ingress
+# metadata is the metadata
+metadata:
+  name: stedi-caleb-ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: stedi-public
+    netwroking.gke.io/managed-certificates: stedi-caleb-certificate
+    kubernetes.io/ingress.allow-http: "false"
+    kubernetes.io/ingress.class: "gce"
+spec:
+  defaultBackend:
+    service:
+      name: stedi-caleb-nodeport
+      port:
+        number: 80
+---
+spec: 
+    # 'selector' tells network layer how to find the right pod
+    selector:
+      app: stedi-caleb
+    type: LoadBalancer # distrubutes network packets to one or more pods
+    ports:
+      - port: 80
+        targetPort: 4567 # port that pod listens to inside of Kubernetes
