--- a/app.yaml
+++ b/app.yaml
@@ -128,6 +128,15 @@ spec:
       port:
         number: 80
 ---
+ 
+---
+# apiVersion tells Kubernetes which version of ymdiraml to use
+apiVersion: v1
+# kind tells what kind of object to create
+kind: Service
+# metadata is the metadata
+metadata:
+  name: stedi-caleb-loadbalancer
 spec: 
     # 'selector' tells network layer how to find the right pod
     selector:
