--- a/app.yaml
+++ b/app.yaml
@@ -115,7 +115,7 @@ kind: Ingress
 metadata:
   name: stedi-caleb-ingress
   annotations:
-    kubernetes.io/ingress.global-static-ip-name: stedi-public
+    kubernetes.io/ingress.global-static-ip-name: stedi-caleb
     netwroking.gke.io/managed-certificates: stedi-caleb-certificate
     kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: "gce"
