Fixeded the many problems

--- a/app.yaml
+++ b/app.yaml
@@ -112,8 +112,8 @@ metadata:
   name: stedi-caleb-ingress
   annotations:
     kubernetes.io/ingress.global-static-ip-name: stedi-caleb
-    netwroking.gke.io/managed-certificates: stedi-caleb-certificate2
-    kubernetes.io/ingress.allow-http: "false"
+    networking.gke.io/managed-certificates: stedi-caleb-certificate2
+    # kubernetes.io/ingress.allow-http: "false"
     kubernetes.io/ingress.class: "gce"
 spec:
   defaultBackend:
