--- a/cloud-build-dev.yaml
+++ b/cloud-build-dev.yaml
@@ -34,7 +34,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
       - run
-      - --filename=app.yaml
+      - --filename=app-dev.yaml
       - --image=gcr.io/$PROJECT_ID/stedi-caleb:$SHORT_SHA
       - --location=us-central1-c
       - --cluster=cluster-1
