--- a/cloud-build-test.yaml
+++ b/cloud-build-test.yaml
@@ -1,13 +1,14 @@
 steps:
 
   # This step builds the container image.
-  - name: 'gcr.io/cloud-builders/docker'
-    id: Build-Latest
-    args:
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/stedi-caleb:latest'
-      - '.'
+  # Not needed outside of the dev build.
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   id: Build-Latest
+  #   args:
+  #     - 'build'
+  #     - '-t'
+  #     - 'gcr.io/$PROJECT_ID/stedi-caleb:latest'
+  #     - '.'
 
   # This step pushes the image to Container Registry
   # The PROJECT_ID and SHORT_SHA variables are automatically
@@ -34,7 +35,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
       - run
-      - --filename=app-dev.yaml
+      - --filename=app-test.yaml
       - --image=gcr.io/$PROJECT_ID/stedi-caleb:$SHORT_SHA
       - --location=us-central1-c
       - --cluster=cluster-1
@@ -50,11 +51,3 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-1'
-      # This step deploys the stage application in Kubernetes
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-    - builds
-    - submit
-    - --config
-    - cloudbuild-test.yaml
