--- a/cloud-build-test.yaml
+++ b/cloud-build-test.yaml
@@ -36,7 +36,7 @@ steps:
     args:
       - run
       - --filename=app-test.yaml
-      - --image=gcr.io/$PROJECT_ID/stedi-caleb:$SHORT_SHA
+      - --image=gcr.io/$PROJECT_ID/stedi-caleb:latest
       - --location=us-central1-c
       - --cluster=cluster-1
 
