Fixing directory stomp

--- a/cloud-build-prod.yaml
+++ b/cloud-build-prod.yaml
@@ -36,9 +36,10 @@ steps:
     args:
       - run
       - --filename=app-prod.yaml
-      - --image=gcr.io/$PROJECT_ID/stedi-caleb:$SHORT_SHA
+      - --image=gcr.io/$PROJECT_ID/stedi-caleb:latest
       - --location=us-central1-c
       - --cluster=cluster-1
+      - --output=/temp/output-prod
 
   # This step scales up the stedi pod
   - name: 'gcr.io/cloud-builders/kubectl'
