--- a/cloud-build-dev.yaml
+++ b/cloud-build-dev.yaml
@@ -38,6 +38,7 @@ steps:
       - --image=gcr.io/$PROJECT_ID/stedi-caleb:$SHORT_SHA
       - --location=us-central1-c
       - --cluster=cluster-1
+      - --output=/temp/output-prod
 
   # This step scales up the stedi pod
   - name: 'gcr.io/cloud-builders/kubectl'
