--- a/redis.yaml
+++ b/redis.yaml
@@ -1,32 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-stedi-dev-caleb
+  name: redis-stedi-caleb
 spec:
   ports:
     - port: 6379
       name: redis
   clusterIP: None
   selector:
-    app: redis-stedi-dev-caleb
+    app: redis-stedi-caleb
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: redis-stedi-dev-caleb
+  name: redis-stedi-caleb
 spec:
   selector:
     matchLabels:
-      app: redis-stedi-dev-caleb  # has to match .spec.template.metadata.labels
-  serviceName: redis-stedi-dev-caleb
+      app: redis-stedi-caleb  # has to match .spec.template.metadata.labels
+  serviceName: redis-stedi-caleb
   replicas: 1
   template:
     metadata:
       labels:
-        app: redis-stedi-dev-caleb  # has to match .spec.selector.matchLabels
+        app: redis-stedi-caleb  # has to match .spec.selector.matchLabels
     spec:
       containers:
-        - name: redis-stedi-dev-caleb
+        - name: redis-stedi-caleb
           image: redis:7.0.5-alpine
           imagePullPolicy: Always
           args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
@@ -44,14 +44,14 @@ spec:
           - name: REDIS_PASS
             valueFrom:
               secretKeyRef:
-                name: redis-secrets-dev-caleb
+                name: redis-secrets-caleb
                 key: REDIS_PASS
           volumeMounts:
-            - name: redis-dev-volume
+            - name: redis-volume
               mountPath: /data
   volumeClaimTemplates:
   - metadata:
-      name: redis-dev-volume
+      name: redis-volume
     spec:
       accessModes:
         - ReadWriteOnce
