--- a/app-dev.yaml
+++ b/app-dev.yaml
@@ -36,7 +36,7 @@ spec:
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: redis-secrets-caleb
+                  name: redis-secrets-dev-caleb
                   key: REDIS_PASS
             - name: REDIS_HOST
               value: "redis-stedi-dev"
