--- a/redis.yaml
+++ b/redis.yaml
@@ -44,7 +44,7 @@ spec:
           - name: REDIS_PASS
             valueFrom:
               secretKeyRef:
-                name: redis-secrets-caleb
+                name: redis-secrets-dev-caleb
                 key: REDIS_PASS
           volumeMounts:
             - name: redis-volume
