Adding prod build

--- a/cloud-build-test.yaml
+++ b/cloud-build-test.yaml
@@ -52,3 +52,9 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-1'
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args:
+    - builds
+    - submit
+    - --config
+    - cloudbuild-prod.yaml
